// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > produces shared files for RSC kind 1`] = `
{
  ".gitignore": [
    ".DS_Store
.env
.env.local
/node_modules/

# React Router
/.react-router/
/build/

# Content Layer
/.sprinkles/

# Cloudflare
.wrangler
",
    {
      "executable": false,
    },
  ],
  "README.md": [
    "# test-repo



A React Router application with React Server Components and content-layer.


## Getting Started

\`\`\`bash
vp dev
\`\`\`
",
    {
      "executable": false,
    },
  ],
  "app": {
    "root.tsx": [
      "import type { PropsWithChildren } from "react";

import { Outlet, Scripts } from "react-router";

export function Layout({ children }: PropsWithChildren) {
    return (
        <html lang="en">
            <head>
                <meta charSet="utf-8" />
                <meta content="width=device-width, initial-scale=1" name="viewport" />
                <meta content="#000000" name="theme-color" />
                <title>test-repo</title>
            </head>
            <body>
                {children}
                <Scripts />
            </body>
        </html>
    );
}

export function HydrateFallback() {
    return <div>Loading...</div>;
}

export default function App() {
    return <Outlet />;
}
",
      {
        "executable": false,
      },
    ],
    "routes.ts": [
      "import { type RouteConfig, index } from "@react-router/dev/routes";

export default [index("home.tsx")] satisfies RouteConfig;
",
      {
        "executable": false,
      },
    ],
  },
  "react-compiler.plugin.ts": [
    "import babel from "vite-plugin-babel";

export interface LoggerEvent extends Event {
    kind:
        | "CompileSuccess"
        | "CompileError"
        | "CompileDiagnostic"
        | "CompileSkip"
        | "PipelineError"
        | "Timing";

    detail: {
        description: string;
        suggestions: string;
        loc: {
            start: { line: number; column: number };
            end: { line: number; column: number };
        };
    };
}

export interface ReactCompilerConfig {
    /** Controls the strategy for determining which functions the React Compiler will optimize. */
    compilationMode?: "infer" | "annotation" | "syntax" | "all";
    /** Configures the React version compatibility for the compiled output. */
    target?: "17" | "18" | "19";
    /** Determines whether compilation errors should fail the build or skip optimization. */
    panicThreshold?: "none" | "critical_errors" | "all_errors";
    /** Configures custom logging to track compiler behavior and debug issues. */
    logger?: {
        logEvent: (filename: string | null, event: LoggerEvent) => void;
    };
    /** Configures runtime feature flag gating for compiled functions. */
    gating?: {
        /** Module path to import the feature flag from */
        source: string;
        /** Name of the exported function to import */
        importSpecifierName: string;
    };
}

const FILTER = /\\.[jt]sx?$/;

export function reactCompiler(config: ReactCompilerConfig = {}) {
    return babel({
        filter: FILTER,
        babelConfig: {
            presets: ["@babel/preset-typescript"],
            plugins: [["babel-plugin-react-compiler", config]],
        },
    });
}
",
    {
      "executable": false,
    },
  ],
  "react-router.config.ts": [
    "import type { Config } from "@react-router/dev/config";

export default {
    ssr: ,
} satisfies Config;
",
    {
      "executable": false,
    },
  ],
}
`;

exports[`template > produces shared files for SPA kind 1`] = `
{
  ".env.local": [
    "VITE_CONVEX_URL=# Set by \`npx convex dev\`
",
    {
      "executable": false,
    },
  ],
  ".gitignore": [
    ".DS_Store
.env
.env.local
/node_modules/

# React Router
/.react-router/
/build/
",
    {
      "executable": false,
    },
  ],
  "README.md": [
    "# test-repo

A React Router single-page application with Convex and TanStack Query.




## Getting Started

\`\`\`bash
vp dev
\`\`\`
",
    {
      "executable": false,
    },
  ],
  "app": {
    "home.tsx": [
      "import type { Route } from "./+types/home.ts";

import { queryClient } from "./root.tsx";

export async function clientLoader(_args: Route.ClientLoaderArgs) {
    // Pre-populate query cache before render
    // await queryClient.ensureQueryData(yourQueryOptions);
    return {};
}

export default function Home() {
    return (
        <main>
            <h1>Welcome to test-repo</h1>
        </main>
    );
}
",
      {
        "executable": false,
      },
    ],
    "root.tsx": [
      "import type { PropsWithChildren } from "react";

import { ConvexQueryClient } from "@convex-dev/react-query";
import { QueryClient, QueryClientProvider } from "@tanstack/react-query";
import { ConvexProvider, ConvexReactClient } from "convex/react";
import { Outlet, Scripts } from "react-router";

const convex = new ConvexReactClient(import.meta.env.VITE_CONVEX_URL);
const convexQueryClient = new ConvexQueryClient(convex);
export const queryClient = new QueryClient({
    defaultOptions: {
        queries: {
            queryKeyHashFn: convexQueryClient.hashFn(),
            queryFn: convexQueryClient.queryFn(),
            experimental_prefetchInRender: true,
        },
    },
});

convexQueryClient.connect(queryClient);

export function Layout({ children }: PropsWithChildren) {
    return (
        <html lang="en">
            <head>
                <meta charSet="utf-8" />
                <meta content="width=device-width, initial-scale=1" name="viewport" />
                <meta content="#000000" name="theme-color" />
                <title>test-repo</title>
            </head>
            <body>
                {children}
                <Scripts />
            </body>
        </html>
    );
}

export function HydrateFallback() {
    return <div>Loading...</div>;
}

export default function App() {
    return (
        <ConvexProvider client={convex}>
            <QueryClientProvider client={queryClient}>
                <Outlet />
            </QueryClientProvider>
        </ConvexProvider>
    );
}
",
      {
        "executable": false,
      },
    ],
    "routes.ts": [
      "import { type RouteConfig, index } from "@react-router/dev/routes";

export default [index("home.tsx")] satisfies RouteConfig;
",
      {
        "executable": false,
      },
    ],
  },
  "convex": {
    "schema.ts": [
      "import { defineSchema, defineTable } from "convex/server";
import { v } from "convex/values";

export default defineSchema({
    // Define your tables here
    // example: defineTable({ name: v.string() }),
});
",
      {
        "executable": false,
      },
    ],
  },
  "package.json": [
    "{
    "name": "test-repo",
    "private": true,
    "type": "module",
    "sideEffects": false,
    "dependencies": {
        "@convex-dev/react-query": "^0.1.0",
        "@tanstack/react-query": "^5.90.21",
        "convex": "^1.32.0",
        "react": "^19.2.4",
        "react-dom": "^19.2.4",
        "react-router": "^7.13.1"
    },
    "devDependencies": {
        "@babel/preset-typescript": "^7.28.5",
        "@react-router/dev": "^7.13.1",
        "@tailwindcss/vite": "^4.1.11",
        "@types/react": "^19.2.14",
        "@types/react-dom": "^19.2.3",
        "babel-plugin-react-compiler": "^1.0.0",
        "tailwindcss": "^4.1.11",
        "vite-plugin-babel": "^1.5.1"
    }
}
",
    {
      "executable": false,
    },
  ],
  "react-compiler.plugin.ts": [
    "import babel from "vite-plugin-babel";

export interface LoggerEvent extends Event {
    kind:
        | "CompileSuccess"
        | "CompileError"
        | "CompileDiagnostic"
        | "CompileSkip"
        | "PipelineError"
        | "Timing";

    detail: {
        description: string;
        suggestions: string;
        loc: {
            start: { line: number; column: number };
            end: { line: number; column: number };
        };
    };
}

export interface ReactCompilerConfig {
    /** Controls the strategy for determining which functions the React Compiler will optimize. */
    compilationMode?: "infer" | "annotation" | "syntax" | "all";
    /** Configures the React version compatibility for the compiled output. */
    target?: "17" | "18" | "19";
    /** Determines whether compilation errors should fail the build or skip optimization. */
    panicThreshold?: "none" | "critical_errors" | "all_errors";
    /** Configures custom logging to track compiler behavior and debug issues. */
    logger?: {
        logEvent: (filename: string | null, event: LoggerEvent) => void;
    };
    /** Configures runtime feature flag gating for compiled functions. */
    gating?: {
        /** Module path to import the feature flag from */
        source: string;
        /** Name of the exported function to import */
        importSpecifierName: string;
    };
}

const FILTER = /\\.[jt]sx?$/;

export function reactCompiler(config: ReactCompilerConfig = {}) {
    return babel({
        filter: FILTER,
        babelConfig: {
            presets: ["@babel/preset-typescript"],
            plugins: [["babel-plugin-react-compiler", config]],
        },
    });
}
",
    {
      "executable": false,
    },
  ],
  "react-router.config.ts": [
    "import type { Config } from "@react-router/dev/config";

export default {
    ssr: ,
} satisfies Config;
",
    {
      "executable": false,
    },
  ],
  "tsconfig.json": [
    "{
    "include": [
        "**/*.ts",
        "**/*.tsx"
    ],
    "compilerOptions": {
        "allowImportingTsExtensions": true,
        "strict": true,
        "noUnusedLocals": true,
        "noUnusedParameters": true,
        "skipLibCheck": true,
        "verbatimModuleSyntax": true,
        "noEmit": true,
        "moduleResolution": "Bundler",
        "module": "ESNext",
        "target": "ESNext",
        "lib": ["ESNext", "DOM", "DOM.Iterable"],
        "jsx": "react-jsx",
        "paths": {
            "~/*": ["./app/*"]
        }
    }
}
",
    {
      "executable": false,
    },
  ],
  "vite.config.ts": [
    "import tailwindcss from "@tailwindcss/vite";
import { reactRouter } from "@react-router/dev/vite";
import { defineConfig } from "vite-plus";

import { reactCompiler } from "./react-compiler.plugin.ts";

export default defineConfig({
    plugins: [tailwindcss(), reactRouter(), reactCompiler()],
    resolve: {
        tsconfigPaths: true,
    },
});
",
    {
      "executable": false,
    },
  ],
}
`;

exports[`template > produces shared files for SSR kind 1`] = `
{
  ".gitignore": [
    ".DS_Store
.env
.env.local
/node_modules/

# React Router
/.react-router/
/build/
",
    {
      "executable": false,
    },
  ],
  "README.md": [
    "# test-repo


A server-rendered React Router application with Convex and TanStack Query.



## Getting Started

\`\`\`bash
vp dev
\`\`\`
",
    {
      "executable": false,
    },
  ],
  "app": {
    "root.tsx": [
      "import type { PropsWithChildren } from "react";

import { Outlet, Scripts } from "react-router";

export function Layout({ children }: PropsWithChildren) {
    return (
        <html lang="en">
            <head>
                <meta charSet="utf-8" />
                <meta content="width=device-width, initial-scale=1" name="viewport" />
                <meta content="#000000" name="theme-color" />
                <title>test-repo</title>
            </head>
            <body>
                {children}
                <Scripts />
            </body>
        </html>
    );
}

export function HydrateFallback() {
    return <div>Loading...</div>;
}

export default function App() {
    return <Outlet />;
}
",
      {
        "executable": false,
      },
    ],
    "routes.ts": [
      "import { type RouteConfig, index } from "@react-router/dev/routes";

export default [index("home.tsx")] satisfies RouteConfig;
",
      {
        "executable": false,
      },
    ],
  },
  "react-compiler.plugin.ts": [
    "import babel from "vite-plugin-babel";

export interface LoggerEvent extends Event {
    kind:
        | "CompileSuccess"
        | "CompileError"
        | "CompileDiagnostic"
        | "CompileSkip"
        | "PipelineError"
        | "Timing";

    detail: {
        description: string;
        suggestions: string;
        loc: {
            start: { line: number; column: number };
            end: { line: number; column: number };
        };
    };
}

export interface ReactCompilerConfig {
    /** Controls the strategy for determining which functions the React Compiler will optimize. */
    compilationMode?: "infer" | "annotation" | "syntax" | "all";
    /** Configures the React version compatibility for the compiled output. */
    target?: "17" | "18" | "19";
    /** Determines whether compilation errors should fail the build or skip optimization. */
    panicThreshold?: "none" | "critical_errors" | "all_errors";
    /** Configures custom logging to track compiler behavior and debug issues. */
    logger?: {
        logEvent: (filename: string | null, event: LoggerEvent) => void;
    };
    /** Configures runtime feature flag gating for compiled functions. */
    gating?: {
        /** Module path to import the feature flag from */
        source: string;
        /** Name of the exported function to import */
        importSpecifierName: string;
    };
}

const FILTER = /\\.[jt]sx?$/;

export function reactCompiler(config: ReactCompilerConfig = {}) {
    return babel({
        filter: FILTER,
        babelConfig: {
            presets: ["@babel/preset-typescript"],
            plugins: [["babel-plugin-react-compiler", config]],
        },
    });
}
",
    {
      "executable": false,
    },
  ],
  "react-router.config.ts": [
    "import type { Config } from "@react-router/dev/config";

export default {
    ssr: ,
} satisfies Config;
",
    {
      "executable": false,
    },
  ],
}
`;

exports[`template > produces shared files for ts-package kind 1`] = `
{
  ".gitignore": [
    ".DS_Store
.env
.env.local
/node_modules/

# Build
/dist/
",
    {
      "executable": false,
    },
  ],
  "README.md": [
    "# test-repo




A TypeScript package.

## Getting Started

\`\`\`bash
vp run dev
\`\`\`
",
    {
      "executable": false,
    },
  ],
  "package.json": [
    "{
    "name": "@test-owner/test-repo",
    "version": "0.1.0",
    "description": "",
    "license": "MIT",
    "type": "module",
    "types": "./dist/index.d.mts",
    "exports": {
        ".": "./dist/index.mjs",
        "./package.json": "./package.json"
    },
    "files": [
        "dist",
        "src"
    ],
    "scripts": {
        "prepublishOnly": "vp pack"
    },
    "dependencies": {
        "zod": "^4.3.6"
    },
    "devDependencies": {
        "@types/node": "^25.3.5",
        "vite-plus": "latest",
        "vitest": "npm:@voidzero-dev/vite-plus-test@latest"
    },
    "packageManager": "pnpm@10.32.1",
    "pnpm": {
        "overrides": {
            "vite": "npm:@voidzero-dev/vite-plus-core@latest",
            "vitest": "npm:@voidzero-dev/vite-plus-test@latest"
        }
    }
}
",
    {
      "executable": false,
    },
  ],
  "src": {
    "index.ts": [
      "export function greet(name: string): string {
    return \`Hello, \${name}!\`;
}
",
      {
        "executable": false,
      },
    ],
  },
  "tests": {
    "index.test.ts": [
      "import { describe, expect, it } from "vite-plus/test";

import { greet } from "../src/index.ts";

describe("greet", () => {
    it("should return a greeting", () => {
        expect(greet("world")).toBe("Hello, world!");
    });
});
",
      {
        "executable": false,
      },
    ],
  },
  "tsconfig.json": [
    "{
    "compilerOptions": {
        "target": "ESNext",
        "module": "ESNext",
        "moduleResolution": "Bundler",
        "strict": true,
        "esModuleInterop": true,
        "skipLibCheck": true,
        "isolatedModules": true,
        "declaration": true,
        "declarationMap": true,
        "sourceMap": true,
        "outDir": "./dist",
        "rootDir": "./src"
    },
    "include": ["src"],
    "exclude": ["node_modules", "dist"]
}
",
    {
      "executable": false,
    },
  ],
  "vite.config.ts": [
    "import { defineConfig } from "vite-plus";

export default defineConfig({
    pack: {
        dts: {
            tsgo: true,
        },
        exports: true,
    },
    run: {
        tasks: {
            build: { command: "vp pack" },
            dev: { command: "vp pack --watch" },
        },
    },
});
",
    {
      "executable": false,
    },
  ],
}
`;
